--- a/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
+++ b/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
@@ -6,6 +6,7 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
+    <script src="https://kit.fontawesome.com/7b501ddc7c.js" crossorigin="anonymous"></script>
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
@@ -16,16 +17,13 @@
         <div class="container">
             <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <div class="w-100"><asp:Image ImageUrl="~\Img\15-1.jpg" CssClass="w-100" runat="server" /></div>
+                    <asp:Image ImageUrl="~\Img\15-1.jpg" CssClass="" Width="80px" runat="server" />
                     
                 </a>
-
+                
                 <ul class="nav nav-pills">
-                    <li class="nav-item"><a href="#" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-                    <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                    <li class="nav-item"><a href="Default.aspx" class="nav-link active" aria-current="page">Home</a></li>
+                    <li class="nav-item"><a href="Carrello.aspx" class="nav-link">Carrello</a></li>                   
                 </ul>
             </header>
         </div>
@@ -40,21 +38,15 @@
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <div class="col-md-4 d-flex align-items-center">
                     <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                        <asp:Image ImageUrl="~\Img\15-1.jpg" runat="server" />
+                        <asp:Image ImageUrl="~\Img\15-1.jpg" Width="80px" runat="server" />
                     </a>
                     <span class="text-muted">© 2021 Company, Inc</span>
                 </div>
 
-                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-                    <li class="ms-3"><a class="text-muted" href="#">
-                        <svg class="bi" width="24" height="24">
-                            <use xlink:href="#twitter"></use></svg></a></li>
-                    <li class="ms-3"><a class="text-muted" href="#">
-                        <svg class="bi" width="24" height="24">
-                            <use xlink:href="#instagram"></use></svg></a></li>
-                    <li class="ms-3"><a class="text-muted" href="#">
-                        <svg class="bi" width="24" height="24">
-                            <use xlink:href="#facebook"></use></svg></a></li>
+                <ul class="nav col-md-4 justify-content-end list-unstyled d-flex gap-3">
+                    <i class="fa-brands fa-facebook"></i>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-linkedin-in"></i>
                 </ul>
             </footer>
         </div>
