tentative to add notifications of cart products

--- a/U1-W3-D5-Progetto_Settimanale/Style.css
+++ b/U1-W3-D5-Progetto_Settimanale/Style.css
@@ -1,2 +1,11 @@
 ﻿body {
+
+}
+
+.cart-bradge {
+    display: flex;
+    align-items: flex-start;
+    text-align: start;
+    justify-content: center;
+}
 }
