fix styling of site

--- a/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
+++ b/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
@@ -23,7 +23,7 @@
                 
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="Default.aspx" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item d-flex justify-content-center align-items-start"><a href="Carrello.aspx" class="nav-link">Carrello</a><asp:Label ID="CartNotifications" runat="server"><span class="badge text-bg-secondary"></span></asp:Label></li>                
+                    <li class="nav-item"><a href="Carrello.aspx" class="nav-link">Carrello</a></li>                
                 </ul>
             </header>
         </div>
