--- a/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
+++ b/U1-W3-D5-Progetto_Settimanale/TemplateSite.Master
@@ -10,20 +10,41 @@
     <link href="Style.css" rel="stylesheet" />
     <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
+    <style>
+
+        body {
+            height: 100%;
+            width: 100%;
+        }
+        .txtOrange {
+            color: orange;
+        }
+
+        footer {
+            font-size: 1.2rem;
+        }
+
+        i {
+            font-size: 2rem;
+        }
+    </style>
 </head>
 <body>
     <form id="form1" runat="server">
        <%-- HEADER--%>
         <div class="container">
-            <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+            <header class="d-flex gap-4 flex-wrap justify-content-center align-items-center py-3 mb-4 border-bottom">
                 <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-                    <asp:Image ImageUrl="~\Img\15-1.jpg" CssClass="" Width="80px" runat="server" />
-                    
+                    <asp:Image ImageUrl="~\Img\Logo\logo.jpg" CssClass="" Width="180px" runat="server" />
+                    <h1><span class="txtOrange">SHO</span>BALL</h1>
                 </a>
-                
+                <div>
+                    
+                </div>
                 <ul class="nav nav-pills">
                     <li class="nav-item"><a href="Default.aspx" class="nav-link active" aria-current="page">Home</a></li>
-                    <li class="nav-item"><a href="Carrello.aspx" class="nav-link">Carrello</a></li>                
+                    <%--<li class="nav-item"><a href="Carrello.aspx" class="nav-link">Carrello</a></li>--%>
+                    <li class="nav-item d-flex justify-content-center align-items-start"><a href="Carrello.aspx" class="nav-link">Carrello</a><asp:Label ID="CartNotifications" runat="server"><span class="badge text-bg-secondary" runat="server" id="notifyCart"></span></asp:Label></li>
                 </ul>
             </header>
         </div>
@@ -38,7 +59,7 @@
             <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
                 <div class="col-md-4 d-flex align-items-center">
                     <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-                        <asp:Image ImageUrl="~\Img\15-1.jpg" Width="80px" runat="server" />
+                        <asp:Image ImageUrl="~\Img\Logo\logo.jpg" Width="80px" runat="server" />
                     </a>
                     <span class="text-muted">© 2021 Company, Inc</span>
                 </div>
